docker trying build

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,8 +7,14 @@ WORKDIR /workspace
 # Copy the requirements file into the container
 COPY requirements.txt .
 
-# Install the dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Create and activate a virtual environment
+RUN python -m venv /workspace/venv
+
+# Install dependencies with a longer timeout
+RUN /workspace/venv/bin/pip install --no-cache-dir -r requirements.txt --default-timeout=100
+
+# Install Streamlit
+RUN /workspace/venv/bin/pip install streamlit
 
 # Copy the rest of the application code into the container
 COPY . .
@@ -17,4 +23,4 @@ COPY . .
 EXPOSE 8501
 
 # Command to run the Streamlit app
-CMD ["streamlit", "run", "streamlit_app.py"]
+CMD ["/workspace/venv/bin/streamlit", "run", "streamlit_app.py"]
